--- a/index.html
+++ b/index.html
@@ -502,8 +502,7 @@
 					}
 					save()
 				}
-				D = loadProp('data');
-				return (DefCond = loadProp('defCond'));
+				return (D = loadProp('data'));
 			}
 
 		// init
