--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 		// prop io
 
 			function saveConds() {
-				saveProp('conditions',Conds);
+				save();
 			}
 			function loadProp(nm) {
 				return JSON.parse(LS.getItem(nm));
