--- a/headtool.html
+++ b/headtool.html
@@ -223,7 +223,7 @@
 		pg('#results ~ :not(:last-child) :last-child').text('');
 		pg('#accept').hide();
 		setFromCtl(HeadTool,this);
-		saveProp('headTool',HeadTool);
+		save();
 	});
 	setCtls(HeadTool);
 	suction();
