--- a/motor_perf.html
+++ b/motor_perf.html
@@ -89,7 +89,7 @@
 		$('canvas').hide();
 		$('#plot_btn').show();
 		setFromCtl(MotorPerf,ev.target);
-		saveProp('motorPerf',MotorPerf);
+		save();
 	});
 	effChg();
 	
