--- a/nema.html
+++ b/nema.html
@@ -38,7 +38,7 @@ Efficiency Class
 	}
 	nmAll().change((ev) => {
 		setFromCtl(Nema,ev.target);
-		saveProp('nema',Nema);
+		save();
 		result();
 	});
 	result();
