--- a/specific_speed.html
+++ b/specific_speed.html
@@ -92,7 +92,7 @@
 		$('#plot').hide();
 		$('#plot_btn').show();
 		setFromCtl(SpecSpeed,ev.target);
-		saveProp('specSpeed',SpecSpeed);
+		save();
 	});
 
 	setupVd();
