--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 					}
 					save()
 				}
-				D = JSON.parse(LS.getItem('data');
+				D = JSON.parse(LS.getItem('data'));
 				$.extend(window,D);
 				return D;
 			}
