--- a/main.html
+++ b/main.html
@@ -90,7 +90,7 @@ The Pumping System Assessment Tool was developed by the Department of Energy's B
 		Dlg.showSaveDialog(dlgFil(),
 			function (fn) {
 				if (fn) {					
-					D.vs = Remote.app.getVersion()
+					D.vs = R.app.getVersion()
 					require('fs').writeFile(fn,JSON.stringify(D));
 				}
 		}); 
