--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 		// prop io
 
 			function save() {
-				localStorage.setItem('data',JSON.stringify(W))
+				localStorage.setItem('data',JSON.stringify(D))
 			}
 			IMP = ['gpm','hp','ft','psig'];// imperial
 			function loadData(reset) {
