--- a/conditions.html
+++ b/conditions.html
@@ -32,7 +32,7 @@
 			<td><button onclick='cpCon(this)'><i class="fa fa-plus"></i></button></td>
 		</tr>
 		<tr>
-			<td><input type="checkbox" onclick='chkAll(this)'></input></td>
+			<td><input type="checkbox" onclick='chkAll(this)' checked></input></td>
 		</tr>
 	</table>
 	<p>
