--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 							motor_field_current: '',
 							motor_field_voltage: 460,
 
-							grid: false
+							grid: true
 						},
 						Units: IMP,
 						Conds: [],
