--- a/grid.html
+++ b/grid.html
@@ -163,7 +163,7 @@
 		<td>
 			<div>Size Margin <em>(%)</em></div>
 		</td>
-		<td><input name='margin' data-vd-rng=0></td>
+		<td><input name='margin' data-vd-rng='0-100'></td>
 	</tr>
 	<tr>
 		<td class='th'>Cost</td>
@@ -173,7 +173,7 @@
 		<td>
 			<div>Operating Fraction <em>(%)</em></div>
 		</td>
-		<td><input name='fraction' data-vd-rng='0.1-100'></td>
+		<td><input name='fraction' data-vd-rng='0-100'></td>
 	</tr>
 	<tr>
 		<td>
