--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
 
 Upd = R.autoUpdater;
 Upd.setFeedURL('http://localhost/update/win32/'+R.app.getVersion());
-Upd.on('checking-for-update', function() {alert('check')});
+Upd.on('checking-for-update', function() {alert('zcheck')});
 Upd.on('update-available', function() {alert('avail')});
 Upd.on('update-not-available', function() {alert('not')});
 Upd.checkForUpdates();
