FIx minor syntax error. Update bindings to point to latest library directories.

--- a/grid.html
+++ b/grid.html
@@ -186,7 +186,7 @@
 	</tr>
 	<tr>
 		<td>
-			<div>Flow Rate</td>
+			<div>Flow Rate</div></td>
 		<td><input name='flow' data-vd-rng></td>
 	</tr>
 	<tr>
